hover background, price line-heigth and reviews alignment has been fixed

--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,7 @@ body {
 
 .reviews {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   font-size: 10px;
   line-height: 14px;
   color: #060b35;
@@ -83,13 +83,13 @@ body {
   display: flex;
   align-items: center;
   font-size: 12px;
-  line-height: 18px;
   color: #616070;
 }
 
 .price__value {
   font-weight: 700;
   font-size: 16px;
+  line-height: 18px;
   color: #060b35;
 }
 
@@ -118,7 +118,8 @@ body {
 
 .buy-button:hover {
   background: #fff;
-  border: 1px solid #f3f3f3;
+  border: 1px solid #00acdc;
+  box-sizing: border-box;
   border-radius: 5px;
 }
 
